# imx-forge

./: .gitignore  .gitmodules  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  QUICK_START.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci-build.yml  ci-full.yml  ci-pr.yml  ci-release.yml  deploy.yml  pr-status-report.yml
QUICK_START/: index.html
architecture/: index.html
architecture/BUILD_SYSTEM/: index.html
architecture/PATCH_SYSTEM/: index.html
architecture/SYSTEM_ARCHITECTURE/: index.html
ci/: index.html
ci/ci-build/: index.html
ci/ci-full/: index.html
ci/ci-pr/: index.html
ci/ci-release/: index.html
develop/: README.md  scripts_readme_check.sh
development/: index.html
development/ENVIRONMENT_SETUP/: index.html
docker/: Dockerfile  Dockerfile.cn  README.md  setup-mirror.sh
document/: QUICK_START.md  index.md
document/architecture/: BUILD_SYSTEM.md  PATCH_SYSTEM.md  SYSTEM_ARCHITECTURE.md
document/ci/: ci-build.md  ci-full.md  ci-pr.md  ci-release.md  index.md
document/development/: ENVIRONMENT_SETUP.md
document/logo/: README.md
document/modules/: DEVICE_TREE_GUIDE.md
document/scripts/: index.md  manual_mount_nfs.sh.md  merge_overlay_rootfs.sh.md  patch_maker.sh.md  release-all.sh.md  varified_rootfs_ok.sh.md
document/scripts/build_helper/: build-busybox.sh.md  build-linux.sh.md  build-mainline-linux.sh.md  build-uboot.sh.md
document/scripts/document/: mkdocs_dev.sh.md
document/scripts/driver_helper/: build_driver.sh.md  deploy_driver.sh.md  review_driver.sh.md  show_device_tree.sh.md  template_creator.sh.md
document/scripts/init/: env-init.sh.md
document/scripts/lib/: driver_buildlib.sh.md  logging.sh.md
document/scripts/logo_helper/: logo_helper.sh.md
document/scripts/release_builder/: build_release_busybox.sh.md  build_release_linux.sh.md  build_release_uboot.sh.md
document/scripts/server_helper/: copy_to_tftp.sh.md
document/scripts/third_party_install/: install_firmwares.sh.md  install_fonts.sh.md  install_libc.sh.md  install_qt_with_compile.sh.md
document/todo/: README.md  index.md  roadmap.md  todo.md
document/todo/archive/: v0.5-milestone.md
document/todo/directions/: d1-environment.md  d2-tools.md  d3-examples.md  d4-ecosystem.md
document/todo/projects/: index.md  proj-001-env-monitor.md  proj-002-image-analyzer.md
document/tutorial/: index.md
driver/application/: .gitignore  CMakeLists.txt  README.md  arm_toolchain.cmake
driver/application/async_notify_demo_12/: CMakeLists.txt  async_test.c
driver/application/async_notify_demo_12/tests/: CMakeLists.txt  integration_test.sh  mock_async_notify_demo.c  mock_async_notify_demo.h  test_async_test.c
driver/application/atomic_demo_05/: CMakeLists.txt  atomic_test.c
driver/application/atomic_demo_05/tests/: CMakeLists.txt  integration_test.sh  mock_atomic_demo.c  mock_atomic_demo.h  test_atomic_test.c
driver/application/beep/: CMakeLists.txt
driver/application/beep/tests/: CMakeLists.txt  integration_test.sh  mock_beep.c  mock_beep.h  test_beep.c
driver/application/blocking_io_demo_10/: CMakeLists.txt  buffer_test.c
driver/application/blocking_io_demo_10/tests/: CMakeLists.txt  integration_test.sh  mock_blocking_io_demo.c  mock_blocking_io_demo.h  test_buffer_test.c
driver/application/chardev_led_control/: CMakeLists.txt  led_control.c
driver/application/chardev_led_control/tests/: CMakeLists.txt  integration_test.sh  mock_chardev.c  mock_chardev.h  test_led_control.c
driver/application/interrupt_demo_09/: CMakeLists.txt  button_test.c
driver/application/interrupt_demo_09/tests/: CMakeLists.txt  integration_test.sh  mock_interrupt_demo.c  mock_interrupt_demo.h  test_button_test.c
driver/application/mutex_demo_07/: CMakeLists.txt  mutex_test.c
driver/application/mutex_demo_07/tests/: CMakeLists.txt  integration_test.sh  mock_mutex_demo.c  mock_mutex_demo.h  test_mutex_test.c
driver/application/nonblocking_io_demo_11/: CMakeLists.txt  poll_test.c
driver/application/nonblocking_io_demo_11/tests/: CMakeLists.txt  integration_test.sh  mock_nonblocking_io_demo.c  mock_nonblocking_io_demo.h  test_poll_test.c
driver/application/spinlock_demo_06/: CMakeLists.txt  spinlock_test.c
driver/application/spinlock_demo_06/tests/: CMakeLists.txt  integration_test.sh  mock_spinlock_demo.c  mock_spinlock_demo.h  test_spinlock_test.c
driver/application/timer_demo_08/: CMakeLists.txt  timer_test.c
driver/application/timer_demo_08/tests/: CMakeLists.txt  integration_test.sh  mock_timer_demo.c  mock_timer_demo.h  test_timer_test.c
driver/firmwares/: README.md
logo/: index.html
modules/: index.html
modules/DEVICE_TREE_GUIDE/: index.html
patches/linux_mainline/: linux_mainline-feat-imx6ull_patches-20260322.patch
patches/uboot-imx/: charlies_board.patch
rootfs/: .gitignore
scripts/: index.html  merge_overlay_rootfs.sh  patch_maker.sh  release-all.sh  varified_rootfs_ok.sh
scripts/apply_patches.sh/: index.html
scripts/build_helper/: build-busybox.sh  build-linux.sh  build-mainline-linux.sh  build-uboot.sh
scripts/document/: pyproject.toml
scripts/driver_helper/: build_driver.sh  deploy_driver.sh  index.html
scripts/init/: env-init.sh
scripts/lib/: driver_buildlib.sh  logging.sh
scripts/logo_helper/: README.md  logo_helper.sh
scripts/manual_mount_nfs.sh/: index.html
scripts/merge_overlay_rootfs.sh/: index.html
scripts/patch_maker.sh/: index.html
scripts/release-all.sh/: index.html
scripts/release_builder/: build_release_busybox.sh  build_release_linux.sh  build_release_uboot.sh
scripts/third_party_install/: README.md  install_firmwares.sh  install_fonts.sh  install_libc.sh  install_qt_with_compile.sh
scripts/varified_rootfs_ok.sh/: index.html
todo/: index.html
todo/projects/: index.html
todo/roadmap/: index.html
todo/todo/: index.html
tutorial/: index.html
tutorial/docker/: index.html
tutorial/driver/: index.html
tutorial/kernel/: index.html
tutorial/practical/: index.html
tutorial/rootfs/: index.html
tutorial/start/: index.html
tutorial/uboot/: index.html
(+271 files in other folders)
